tests/compile-fail/intrinsics/cttz_nonzero.stderr
error: Undefined Behavior: `cttz_nonzero` called on 0
  --> $DIR/cttz_nonzero.rs:13:9
   |
13 |         cttz_nonzero(0u8); //~ ERROR `cttz_nonzero` called on 0
   |         ^^^^^^^^^^^^^^^^^ `cttz_nonzero` called on 0
   |
   = help: this indicates a bug in the program: it performed an invalid operation, and caused Undefined Behavior
   = help: see https://doc.rust-lang.org/nightly/reference/behavior-considered-undefined.html for further information
           
   = note: inside `main` at $DIR/cttz_nonzero.rs:13:9

note: some details are omitted, run with `MIRIFLAGS=-Zmiri-backtrace=full` for a verbose backtrace

error: aborting due to previous error

